# kana

./: .gitignore  README.md  gitignore
Docker/: Dockerfile
correlator-kana/: CMakeLists.txt
correlator-kana/dataSender/: main.c
correlator-kana/freqCorrect/: hzCorrect.c  hzCorrect.h  main.c
correlator-kana/include/: JSON_parser.h  coefficients.h  directories.h  jsonReader.h  panic.h  socket.h  utils.h
correlator-kana/mode1/: main.c  mode1.c  mode1.h  spectra.c  spectra.h
correlator-kana/mode2/: main.c  mode2.c  mode2.h
correlator-kana/mode3/: main.c  mode3.c  mode3.h
correlator-kana/src/: JSON_parser.c  coefficients.c  jsonReader.c  panic.c  socket.c  utils.c
correlator-kana/timeCorrect/: lagCorrect.c  lagCorrect.h  main.c
kana/: Makefile  coefgen.py  copykana  dataPlotter.py  kana.py
kana/correlator-kana/: JSON_parser.c  coefficients.h  directories.h  jsonReader.c  jsonReader.h  panic.h  socket.c  socket.h  utils.h
kana/correlator-kana/dataSender/: Makefile  dataSender.py  main.c
kana/correlator-kana/freqCorrect/: Makefile  hzCorrect.c  hzCorrect.h  main.c
kana/correlator-kana/mode1/: Makefile  main.c  mode1.c  mode1.h  spectra.c  spectra.h
kana/correlator-kana/mode2/: Makefile  main.c  mode2.c  mode2.h
kana/correlator-kana/mode3/: Makefile  main.c  mode3.c  mode3.h
kana/correlator-kana/timeCorrect/: Makefile  lagCorrect.c  lagCorrect.h  main.c
kana/makectrl/: makectrl.py  mltdict.py  parsetab.py  vex.py
python/: coefgen.py  data_plotter.py  data_sender.py  kana.py  kanamakectrl.py  kanaplotpng.py  mltdict.py  usrdict.py  vex_2.py
